--- a/angularapp1/package.json
+++ b/angularapp1/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.1.3",
     "angular-material": "^1.2.4",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
