--- a/angularapp1/package.json
+++ b/angularapp1/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "2": "^3.0.0",
     "@angular/animations": "~10.1.3",
     "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.3",
@@ -23,7 +24,8 @@
     "@angular/router": "~10.1.3",
     "angular-material": "^1.2.4",
     "rxjs": "~6.6.0",
-    "sweetalert2": "^11.4.4",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
